@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -114,6 +115,15 @@ void Gadget::render( IECore::RendererPtr renderer ) const
 		renderer->setAttribute( "name", new IECore::StringData( fullName() ) );
 		doRender( renderer );
 	renderer->attributeEnd();
+}
+
+void Gadget::doRender( IECore::RendererPtr renderer ) const
+{
+}
+
+Imath::Box3f Gadget::bound() const
+{
+	return Box3f();
 }
 
 Imath::Box3f Gadget::transformedBound() const
