@@ -37,6 +37,7 @@
 #include "boost/python.hpp"
 
 #include "GafferUIBindings/FrameBinding.h"
+#include "GafferUIBindings/GadgetBinding.h"
 #include "GafferUI/Frame.h"
 
 #include "IECorePython/RunTimeTypedBinding.h"
@@ -50,5 +51,6 @@ void GafferUIBindings::bindFrame()
 	// disabled because it clashes with the qt python frame
 	/*IECorePython::RunTimeTypedClass<Frame>()
 		.def( init<GadgetPtr>() )
+		.GAFFERUIBINDINGS_DEFGADGETWRAPPERFNS( Frame )
 	;*/
 }
