@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -37,6 +38,7 @@
 #include "boost/python.hpp"
 
 #include "GafferUIBindings/GraphGadgetBinding.h"
+#include "GafferUIBindings/GadgetBinding.h"
 #include "GafferUI/GraphGadget.h"
 #include "GafferUI/NodeGadget.h"
 
@@ -52,6 +54,7 @@ void GafferUIBindings::bindGraphGadget()
 {
 	IECorePython::RunTimeTypedClass<GraphGadget>()
 		.def( init<Gaffer::NodePtr>() )
+		.GAFFERUIBINDINGS_DEFGADGETWRAPPERFNS( GraphGadget )
 		.def( "nodeGadget", (NodeGadgetPtr (GraphGadget::*)( Gaffer::ConstNodePtr ))&GraphGadget::nodeGadget )
 	;
 }
