@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -37,6 +38,7 @@
 #include "boost/python.hpp"
 
 #include "GafferUIBindings/NameGadgetBinding.h"
+#include "GafferUIBindings/GadgetBinding.h"
 #include "GafferUI/NameGadget.h"
 
 #include "IECorePython/RunTimeTypedBinding.h"
@@ -49,5 +51,6 @@ void GafferUIBindings::bindNameGadget()
 {
 	IECorePython::RunTimeTypedClass<NameGadget>()
 		.def( init<Gaffer::GraphComponentPtr>() )
+		.GAFFERUIBINDINGS_DEFGADGETWRAPPERFNS( NameGadget )
 	;
 }
