@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
+//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -37,6 +38,7 @@
 #include "boost/python.hpp"
 
 #include "GafferUIBindings/SplinePlugGadgetBinding.h"
+#include "GafferUIBindings/GadgetBinding.h"
 #include "GafferUI/SplinePlugGadget.h"
 
 #include "IECorePython/RunTimeTypedBinding.h"
@@ -49,6 +51,7 @@ void GafferUIBindings::bindSplinePlugGadget()
 {
 	IECorePython::RunTimeTypedClass<SplinePlugGadget>()
 		.def( init<>() )
+		.GAFFERUIBINDINGS_DEFGADGETWRAPPERFNS( SplinePlugGadget )
 		.def( "splines", (Gaffer::SetPtr (SplinePlugGadget::*)())&SplinePlugGadget::splines )
 		.def( "selection", (Gaffer::SetPtr (SplinePlugGadget::*)())&SplinePlugGadget::selection )
 	;
